add relPath
